Feat: Equivocation detection and slashing integration